--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@nhost/nhost-js": "^3.3.0",
     "@nhost/react": "^3.11.1",
     "graphql": "^16.11.0",
+    "icons": "^1.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
